--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
             <div class="wrapper-full">
                 <!-- Slider Carousel -->
                 <div class="widget-carousel owl-carousel owl-theme">
-                    <div class="slider-item" data-background="https://res.cloudinary.com/drcqfiqpv/image/upload/v1664873463/front-view_q3ruhz.png">
+                    <div class="slider-item" data-background="https://res.cloudinary.com/dfwpmwtff/image/upload/v1708426537/Front_page_slide1.png">
                         <div class="wrapper">
                             <div class="item-inner">
                                 <h5>WELCOME TO THE AYYO VILLAGE</h5>
@@ -144,7 +144,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="slider-item" data-background="https://res.cloudinary.com/drcqfiqpv/image/upload/v1664874175/vojtech-bruzek-Yrxr3bsPdS0-unsplash_aqsobt.png">
+                    <div class="slider-item" data-background="https://res.cloudinary.com/dfwpmwtff/image/upload/v1708426540/Front_page_slide3.png">
                         <div class="wrapper">
                             <div class="item-inner">
                                 <h5>WELCOME TO THE AYYO VILLAGE</h5>
@@ -153,6 +153,44 @@
                             </div>
                         </div>
                     </div>
+
+                    <div class="slider-item" data-background="https://res.cloudinary.com/dfwpmwtff/image/upload/v1708426540/Front_page_slide2.png">
+                        <div class="wrapper">
+                            <div class="item-inner">
+                                <h5>WELCOME TO THE AYYO VILLAGE</h5>
+                                <h1>The ideal retreat</h1>
+                                <h2>in Isiolo</h2>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="slider-item" data-background="https://res.cloudinary.com/dfwpmwtff/image/upload/v1708426540/Front_page_slide4.png">
+                        <div class="wrapper">
+                            <div class="item-inner">
+                                <h5>WELCOME TO THE AYYO VILLAGE</h5>
+                                <h1>Relax and Unwind</h1>
+                                <h2>in Isiolo</h2>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="slider-item" data-background="https://res.cloudinary.com/dfwpmwtff/image/upload/v1708426540/Front_page_slide5.png">
+                        <div class="wrapper">
+                            <div class="item-inner">
+                                <h5>WELCOME TO THE AYYO VILLAGE</h5>
+                                <h1>Experience the comfort</h1>
+                                <h2>in Isiolo</h2>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="slider-item" data-background="https://res.cloudinary.com/dfwpmwtff/image/upload/v1708426540/Front_page_slide6.png">
+                        <div class="wrapper">
+                            <div class="item-inner">
+                                <h5>WELCOME TO THE AYYO VILLAGE</h5>
+                                <h1>Experience the comfort</h1>
+                                <h2>in Isiolo</h2>
+                            </div>
+                        </div>
+                    </div>
+
                 </div>
                 <!-- Slider Carousel End -->
                 <!-- Slider Booking -->
@@ -345,7 +383,7 @@
                             </div>
                         </div>
                         <div class="col-lg-4 col-sm-6">
-                            <div class="features-item" data-background="https://res.cloudinary.com/dfwpmwtff/image/upload/v1706793716/Conferencehalls.jpg">
+                            <div class="features-item" data-background="https://res.cloudinary.com/dfwpmwtff/image/upload/v1708425073/conferencehall2.png">
                                 <a href="#">
                                     <h3>Conference &amp; Events</h3>
                                     <p>Host successful conferences and events in our state-of-the-art facilities. We provide a seamless experience for your business gatherings.</p>
@@ -648,6 +686,7 @@
 <script src="assets/js/owl.carousel.min.js"></script>
 <script src="assets/js/booking.form.js"></script>
 <script src="assets/js/contact.form.js"></script>
+
 
 <!-- Map Scripts -->
 <script src="http://maps.google.com/maps/api/js?sensor=false&amp;language=en"></script>
