--- a/index.html
+++ b/index.html
@@ -462,7 +462,7 @@
                         </a>
                     </div>
                     <div class="gallery-item">
-                        <a href="https://res.cloudinary.com/dfwpmwtff/image/upload/v1706894466/Facilities_ConferenceHalls.png" data-background="https://res.cloudinary.com/dfwpmwtff/image/upload/v1706894466/Facilities_ConferenceHalls.png" title="Photo Name" class="popup-gallery">
+                        <a href="https://res.cloudinary.com/dfwpmwtff/image/upload/v1708429222/conferenceHall.png" data-background="https://res.cloudinary.com/dfwpmwtff/image/upload/v1708429222/conferenceHall.png" title="Photo Name" class="popup-gallery">
                             <span class="item-text">Conference &amp; Events</span>
                         </a>
                     </div>
@@ -500,7 +500,7 @@
                 <!-- Video Title End -->
                 <!-- Video Content -->
                 <div class="widget-inner">
-                    <a href="https://vimeo.com/39493181" class="video-play popup-video"><i class="fa fa-play"></i></a>
+                    <a href="https://www.youtube.com/watch?v=d3iJNAQrbEo" class="video-play popup-video"><i class="fa fa-play"></i></a>
                 </div>
                 <!-- Video Content End -->
             </div>
