--- a/gallery.html
+++ b/gallery.html
@@ -202,17 +202,17 @@
                     </div>
                     <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 isotope-item conference">
                         <div class="gallery-item">
-                            <a href="https://res.cloudinary.com/dfwpmwtff/image/upload/v1706905073/Gallery/Photo-gallery-28_ggkjrq.jpg" data-background="https://res.cloudinary.com/dfwpmwtff/image/upload/v1706905073/Gallery/Photo-gallery-28_ggkjrq.jpg" title="Photo Name" class="popup-gallery"></a>
+                            <a href="https://res.cloudinary.com/dfwpmwtff/image/upload/v1708425073/conferencehall1.png" data-background="https://res.cloudinary.com/dfwpmwtff/image/upload/v1708425073/conferencehall1.png" title="Photo Name" class="popup-gallery"></a>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 isotope-item conference">
                         <div class="gallery-item">
-                            <a href="https://res.cloudinary.com/dfwpmwtff/image/upload/v1706905073/Gallery/Photo-gallery-28_ggkjrq.jpg" data-background="https://res.cloudinary.com/dfwpmwtff/image/upload/v1706905073/Gallery/Photo-gallery-28_ggkjrq.jpg" title="Photo Name" class="popup-gallery"></a>
+                            <a href="https://res.cloudinary.com/dfwpmwtff/image/upload/v1708425073/conferencehall3.png" data-background="https://res.cloudinary.com/dfwpmwtff/image/upload/v1708425073/conferencehall3.png" title="Photo Name" class="popup-gallery"></a>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 isotope-item wedding restaurant conference">
                         <div class="gallery-item">
-                            <a href="https://res.cloudinary.com/dfwpmwtff/image/upload/v1706905086/Gallery/Photo-gallery-1_conference.jpg" data-background="https://res.cloudinary.com/dfwpmwtff/image/upload/v1706905086/Gallery/Photo-gallery-1_conference.jpg" title="Photo Name" class="popup-gallery"></a>
+                            <a href="https://res.cloudinary.com/dfwpmwtff/image/upload/v1708425073/conferencehall2.png" data-background="https://res.cloudinary.com/dfwpmwtff/image/upload/v1708425073/conferencehall2.png" title="Photo Name" class="popup-gallery"></a>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 isotope-item wedding">
