--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                         <div class="wrapper">
                             <div class="item-inner">
                                 <h5>WELCOME TO THE AYYO VILLAGE</h5>
-                                <h1>Experience the comfort</h1>
+                                <h1>Enjoy the space</h1>
                                 <h2>in Isiolo</h2>
                             </div>
                         </div>
@@ -249,7 +249,7 @@
                 <div class="widget-title">
                     <h5>EXPLORE OUR ACCOMMODATIONS</h5>
                     <h2>Where Comfort Meets Luxury</h2>
-                    <p>Immerse yourself in a world of tranquility and luxury. Our thoughtfully designed rooms offer a perfect blend of comfort and sophistication. Discover a haven of relaxation where every detail is crafted to elevate your stay. Welcome to a place where comfort meets luxury at Ayyo Village Hotel & Restaurant.</p>
+                    <p>Immerse yourself in a world of tranquility and luxury. Our thoughtfully designed rooms offer a perfect blend of comfort and sophistication. Discover a haven of relaxation where every detail is crafted to elevate your stay. Welcome to a place where comfort meets luxury at Ayyo Village Hotel.</p>
                 </div>
                 <!-- Rooms Title End -->
                 <!-- Rooms Carousel -->
@@ -360,7 +360,7 @@
                 <div class="widget-title">
                     <h5>OUR FACILITIES</h5>
                     <h2>Explore Ayyo Village</h2>
-                    <p>Indulge in a world of luxury and convenience at Ayyo Village Hotel & Restaurant. Our array of facilities is designed to make your stay memorable and enjoyable. Discover the exceptional services and amenities that set us apart.</p>
+                    <p>Indulge in a world of luxury and convenience at Ayyo Village Hotel. Our array of facilities is designed to make your stay memorable and enjoyable. Discover the exceptional services and amenities that set us apart.</p>
                 </div>
                 <!-- Features Title End -->
                 <!-- Features Content -->
@@ -377,8 +377,8 @@
                         <div class="col-lg-4 col-sm-6">
                             <div class="features-item" data-background="https://res.cloudinary.com/dfwpmwtff/image/upload/v1706893845/Facilities_PrivateDinning.png">
                                 <a href="#">
-                                    <h3>Private Dining</h3>
-                                    <p>Experience culinary delight in our private dining spaces. Immerse yourself in exquisite flavors in an intimate setting.</p>
+                                    <h3>Restaurant</h3>
+                                    <p>Experience culinary delight in our dining spaces. Immerse yourself in exquisite flavors in an amazing setting.</p>
                                 </a>
                             </div>
                         </div>
@@ -458,7 +458,7 @@
                     </div>
                     <div class="gallery-item">
                         <a href="https://res.cloudinary.com/dfwpmwtff/image/upload/v1706893845/Facilities_PrivateDinning.png" data-background="https://res.cloudinary.com/dfwpmwtff/image/upload/v1706893845/Facilities_PrivateDinning.png" title="Photo Name" class="popup-gallery">
-                            <span class="item-text">Private Dining</span>
+                            <span class="item-text">Restaurant</span>
                         </a>
                     </div>
                     <div class="gallery-item">
@@ -495,7 +495,7 @@
                 <div class="widget-title">
                     <h5>OVERVIEW</h5>
                     <h2>Video Tour</h2>
-                    <p>Get a sneak peek into the beauty and amenities of Ayyo Village Hotel & Restaurant through our captivating video tour. Discover the allure of our surroundings, the comfort of our accommodations, and the warmth of our hospitality. Join us on a visual journey that captures the essence of Ayyo Village.</p>
+                    <p>Get a sneak peek into the beauty and amenities of Ayyo Village Hotel through our captivating video tour. Discover the allure of our surroundings, the comfort of our accommodations, and the warmth of our hospitality. Join us on a visual journey that captures the essence of Ayyo Village.</p>
                 </div>
                 <!-- Video Title End -->
                 <!-- Video Content -->
