--- a/aboutus.html
+++ b/aboutus.html
@@ -227,7 +227,7 @@
                     <div class="features-item">
                         <div class="item-inner" data-background="assets/img/ico-food.png">
                         <h5>RESTAURANT</h5>
-                        <p>Dine in style at our restaurant and lounge, offering a sophisticated ambiance and a menu curated with a fusion of flavors to satisfy your culinary cravings.</p>
+                        <p>Dine in style at our restaurant, offering a sophisticated ambiance and a menu curated with a fusion of flavors to satisfy your culinary cravings.</p>
                     </div>
                     </div>
                     <div class="features-item">
