--- a/index.html
+++ b/index.html
@@ -500,7 +500,7 @@
                 <!-- Video Title End -->
                 <!-- Video Content -->
                 <div class="widget-inner">
-                    <a href="https://www.youtube.com/watch?v=d3iJNAQrbEo" class="video-play popup-video"><i class="fa fa-play"></i></a>
+                    <a href="https://res.cloudinary.com/dfwpmwtff/video/upload/v1713770542/ayyovillagehotelvideo.mp4" class="video-play popup-video"><i class="fa fa-play"></i></a>
                 </div>
                 <!-- Video Content End -->
             </div>
